crates/riri-nce/tests/snapshots/check_engines_fixtures__npm_engines_as_array.snap
---
source: crates/riri-nce/tests/check_engines_fixtures.rs
expression: result
---
computed node: >=7.0.0
computed npm: *
computed yarn: *
change node: * → >=7.0.0
