crates/riri-nce/tests/snapshots/check_engines_fixtures__npm_no_intersection.snap
---
source: crates/riri-nce/tests/check_engines_fixtures.rs
expression: result
---
computed node: >=18.14.0 <18.15.0
computed npm: *
computed yarn: *
change node: 18.14 → >=18.14.0 <18.15.0
