crates/riri-nce/tests/snapshots/check_engines_fixtures__npm_packages_field_v3.snap
---
source: crates/riri-nce/tests/check_engines_fixtures.rs
expression: result
---
computed node: >=6.9.0
computed npm: *
computed yarn: *
change node: * → >=6.9.0
