crates/riri-nce/tests/snapshots/check_engines_fixtures__or_ranges_node_only.snap
---
source: crates/riri-nce/tests/check_engines_fixtures.rs
expression: result
---
computed node: ^14.17.0 || ^16.10.0 || >=17.0.0
computed npm: *
computed yarn: *
change node: * → ^14.17.0 || ^16.10.0 || >=17.0.0
