crates/riri-nce/tests/snapshots/check_engines_fixtures__v1_deps_field.snap
---
source: crates/riri-nce/tests/check_engines_fixtures.rs
expression: result
---
computed node: >=6.9.0
computed npm: *
computed yarn: *
no changes needed
