crates/riri-nce/tests/snapshots/check_engines_fixtures__wildcard_and_missing.snap
---
source: crates/riri-nce/tests/check_engines_fixtures.rs
expression: result
---
computed node: >=16.0.0
computed npm: *
computed yarn: *
change node: * → >=16.0.0
